[gd_scene load_steps=16 format=2]

[ext_resource path="res://enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://bullet/EnemyBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/enemy_saucer.png" type="Texture" id=3]
[ext_resource path="res://enemy/EnemyPaths.tscn" type="PackedScene" id=4]
[ext_resource path="res://explosion/Explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/synthetic_thunder_short.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/enemy_laser.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/corona.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 35.0571

[sub_resource type="Animation" id=2]

resource_name = "flash"
length = 0.25
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CanvasItemMaterial" id=4]

render_priority = 0
blend_mode = 1
light_mode = 0

[sub_resource type="Curve" id=5]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0.124023 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]

flags = 4
width = 2048
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 25, 25, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 25.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 970759.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
scale_curve = SubResource( 6 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Damping", "Emission Shape", "Gravity", "Scale", "Spread" ]

[node name="Enemy" type="Area2D" index="0" groups=[
"enemies",
]]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 2 )
speed = 150
health = 3

[node name="Sprite" type="Sprite" parent="." index="0"]

rotation = 3.60972
texture = ExtResource( 3 )
hframes = 3
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="EnemyPaths" parent="." index="2" instance=ExtResource( 4 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = "rotate"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/flash = SubResource( 2 )
anims/rotate = SubResource( 3 )
blend_times = [  ]

[node name="Explosion" parent="." index="4" instance=ExtResource( 5 )]

visible = false

[node name="ExplodeSound" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="ShootSound" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 7 )
volume_db = -20.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="GunTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = true

[node name="Particles2D" type="Particles2D" parent="." index="8"]

show_behind_parent = true
material = SubResource( 4 )
emitting = true
amount = 20
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 7 )
texture = ExtResource( 8 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Textures", "Visibility" ]

[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]

[connection signal="animation_finished" from="Explosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]


[editable path="Explosion"]
